--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ sudo: false
 #         - libblas-dev
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.clone(pwd())'
+    - julia -e 'add SDCO'
     - julia -e 'Pkg.test("SDCO", coverage=true)'
 after_success:
     - echo $TRAVIS_JULIA_VERSION
